--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PAgina de estilos</title>
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
-    <h1>Primera Pagina que se guarda en GIT</h1>
-    <p>las paginas se guardan en la nube</p>
-
-</body>
+    <link rel="stylesheet" href="css/estilos.css" />
+  </head>
+  <body>
+    <div id="primer">
+      <h1>Primera Pagina que se guarda en GIT</h1>
+      <div id = "Segundo">
+        <p>las paginas se guardan en la nube</p>
+      </div>
+    </div>
+  </body>
 </html>
