Agrego el archivo html Cabecera

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   <body>
     <div id="primer">
       <h1>Primera Pagina que se guarda en GIT</h1>
-      <div id = "Segundo">
+      <div id="cabecera">
+
+        
+      </div>
+
+      <div id="Segundo">
         <p>las paginas se guardan en la nube</p>
       </div>
     </div>
