ajustes a la cabecera CSS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="primer">
       <h1>Primera Pagina que se guarda en GIT</h1>
       <div id="cabecera">
-
+        HyperBlog
         
       </div>
 
